@@ -706,6 +706,35 @@ directive:</p>
 </tr>
 </tbody>
 </table>
+<p>With the &quot;widths&quot; argument &quot;auto&quot; (or &quot;class&quot; value &quot;colwidths-auto&quot;),
+column widths are determined by the backend (if supported by the
+writer/backend).</p>
+<table class="colwidths-auto">
+<thead>
+<tr><th class="head"><p>A</p></th>
+<th class="head"><p>B</p></th>
+<th class="head"><p>A or B</p></th>
+</tr>
+</thead>
+<tbody>
+<tr><td><p>False</p></td>
+<td><p>False</p></td>
+<td><p>False</p></td>
+</tr>
+<tr><td><p>True</p></td>
+<td><p>False</p></td>
+<td><p>True</p></td>
+</tr>
+<tr><td><p>False</p></td>
+<td><p>True</p></td>
+<td><p>True</p></td>
+</tr>
+<tr><td><p>True</p></td>
+<td><p>True</p></td>
+<td><p>True</p></td>
+</tr>
+</tbody>
+</table>
 </div>
 <div class="section" id="admonitions">
 <h3><a class="toc-backref" href="#id89"><span class="sectnum">2.14.3</span> Admonitions</a></h3>
@@ -1413,35 +1442,6 @@ setting (or command line argument).</p>
 </table>
 <p>Currently, referencing to the table by number is not supported. This is a
 common request and already on the <cite>TODO list</cite>.</p>
-</li>
-<li><p>With the &quot;widths&quot; argument &quot;auto&quot; (or &quot;class&quot; value &quot;colwidths-auto&quot;),
-column widths are determined by the browser.</p>
-<table class="colwidths-auto">
-<thead>
-<tr><th class="head"><p>A</p></th>
-<th class="head"><p>B</p></th>
-<th class="head"><p>A or B</p></th>
-</tr>
-</thead>
-<tbody>
-<tr><td><p>False</p></td>
-<td><p>False</p></td>
-<td><p>False</p></td>
-</tr>
-<tr><td><p>True</p></td>
-<td><p>False</p></td>
-<td><p>True</p></td>
-</tr>
-<tr><td><p>False</p></td>
-<td><p>True</p></td>
-<td><p>True</p></td>
-</tr>
-<tr><td><p>True</p></td>
-<td><p>True</p></td>
-<td><p>True</p></td>
-</tr>
-</tbody>
-</table>
 </li>
 <li><p>A table with &quot;booktabs&quot; class value, is rendered similar to the style
 from the <a class="reference external" href="http://tug.ctan.org/tex-archive/macros/latex/contrib/booktabs/booktabs.pdf">booktabs</a> <a class="footnote-reference brackets" href="#id33" id="id34">8</a> LaTeX package.</p>
